# MPU6050-Sensor-Library-Cpp

./: .gitignore  LICENSE  README.md  example.cpp  i2c_interface.cpp  i2c_interface.h  makefile  mpu6050.cpp  mpu6050.h
examples/: bcm2835_i2c_if.cpp  bcm2835_i2c_if.h  example_rpi4.cpp  makefile
examples/ESP32/: CMakeLists.txt
examples/ESP32/1_basic_sensor_read/: CMakeLists.txt
examples/ESP32/1_basic_sensor_read/main/: CMakeLists.txt  example_esp32.cpp
examples/ESP32/2_sensor_fifo_read/: sdkconfig.old
examples/ESP32/2_sensor_fifo_read/main/: CMakeLists.txt  fifo_read_esp32.cpp
examples/ESP32/3_sensor_fifo_read_with_interrupt/: CMakeLists.txt
examples/ESP32/3_sensor_fifo_read_with_interrupt/main/: CMakeLists.txt  fifo_read_interrupt_esp32.cpp
examples/ESP32/_common/: esp32_i2c_if.cpp  esp32_i2c_if.h
examples/ESP32/basic_sensor_read/main/: CMakeLists.txt  example_esp32.cpp
examples/ESP32/main/: CMakeLists.txt  esp32_i2c_if.cpp  esp32_i2c_if.h  example_esp32.cpp
examples/ESP32/sensor_fifo_read/: CMakeLists.txt
examples/ESP32/sensor_fifo_read/main/: CMakeLists.txt  fifo_read_esp32.cpp
examples/ESP32/sensor_fifo_read_with_interrupt/: sdkconfig
examples/ESP32/sensor_fifo_read_with_interrupt/main/: CMakeLists.txt  fifo_read_interrupt_esp32.cpp
examples/RPi_4/bcm2835/: bcm2835_i2c_if.cpp  bcm2835_i2c_if.h  example_rpi4.cpp  example_rpi4_bcm2835.cpp  makefile
examples/RPi_4/wiringPi/: example_rpi4_wiringPi.cpp  makefile  wiringPi_i2c_if.cpp  wiringPi_i2c_if.h
